...
    }
    if (state.discardConfirmation) {
        ConfirmationDialog(
            spec = ConfirmationSpec(
                R.string.settings_discard_title,
                R.string.settings_discard_message,
                "settings_discard_confirm",
                "settings_discard_cancel"
            ),
            onConfirm = actions.onConfirmDiscard,
            onCancel = actions.onCancelDiscard
        )
    }
}
...
